--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Summer Sale</title>
     <link
+      rel="shortcut icon"
+      href="./images/Summer 1.png"
+      type="image/x-icon"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css"
       rel="stylesheet"
       type="text/css"
@@ -40,7 +45,7 @@
     <header class="bg-[#F9F6E2]">
       <!-- start banner section  -->
       <div class="container mx-auto">
-        <div class="flex items-center p-5">
+        <div class="flex flex-col items-center p-5 gap-4 md:flex-row">
           <div class="text-center flex-1">
             <h5 class="text-titleColor text-xl font-medium">
               ---SALE FEVER---
@@ -59,6 +64,370 @@
         </div>
       </div>
     </header>
+    <main class="flex flex-col-reverse container mx-auto lg:flex-row">
+      <!-- wrapping all section  -->
+      <div class="flex-1">
+        <!-- start Kitchenware section  -->
+        <section class="mt-16 px-6">
+          <h1 class="text-titleColor text-4xl font-semibold mb-8">
+            Kitchenware
+          </h1>
+
+          <div class="grid grid-cols-1 gap-2 md:grid-cols-3">
+            <!-- card one  -->
+            <div
+              onclick="btnHandler(this)"
+              class="card bg-base-100 shadow-2xl px-5 pt-5"
+            >
+              <figure class="px-10 bg-[#1111110D]">
+                <img src="./images/prod1.png" class="rounded-xl py-8" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <!-- product rating  -->
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <h2 class="card-title text-xl font-semibold">K. Accessories</h2>
+                <p class="text-[#11111180] text-xl font-normal">
+                  <span>39.00</span> TK
+                </p>
+              </div>
+            </div>
+            <!-- card Two  -->
+            <div
+              onclick="btnHandler(this)"
+              class="card bg-base-100 shadow-2xl px-5 pt-5"
+            >
+              <figure class="px-10 bg-[#1111110D]">
+                <img src="./images/prod2.png" class="rounded-xl py-8 w-36" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <!-- product rating  -->
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-1"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-1"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-1"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-1"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-1"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <h2 class="card-title text-xl font-semibold">K. Accessories</h2>
+                <p class="text-[#11111180] text-xl font-normal">
+                  <span>25.00</span> TK
+                </p>
+              </div>
+            </div>
+            <!-- card Three  -->
+            <div
+              onclick="btnHandler(this)"
+              class="card bg-base-100 shadow-2xl px-5 pt-5"
+            >
+              <figure class="px-10 bg-[#1111110D]">
+                <img src="./images/prod3.png" class="rounded-xl py-8 w-36" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <!-- product rating  -->
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <h2 class="card-title text-xl font-semibold">Home Cooker</h2>
+                <p class="text-[#11111180] text-xl font-normal">
+                  <span>49.00</span> TK
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Sportswear section   -->
+        <section class="mt-16 px-6">
+          <h1 class="text-titleColor text-4xl font-semibold mb-8">
+            Sportswear
+          </h1>
+
+          <div class="grid grid-cols-1 gap-2 md:grid-cols-3">
+            <!-- card one  -->
+            <div
+              onclick="btnHandler(this)"
+              class="card bg-base-100 shadow-2xl px-5 pt-5"
+            >
+              <figure class="px-10 bg-[#1111110D]">
+                <img src="./images/prod4.png" class="rounded-xl py-8" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <!-- product rating  -->
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+
+                <h2 class="card-title text-xl font-semibold">
+                  Sports Back Cap
+                </h2>
+                <p class="text-[#11111180] text-xl font-normal">
+                  <span>49.00</span> TK
+                </p>
+              </div>
+            </div>
+            <!-- card Two  -->
+            <div
+              onclick="btnHandler(this)"
+              class="card bg-base-100 shadow-2xl px-5 pt-5"
+            >
+              <figure class="px-10 bg-[#1111110D]">
+                <img
+                  src="./images/prod5.png"
+                  class="rounded-xl py-8 w-[102px]"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <!-- product rating  -->
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-4"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+
+                <h2 class="card-title text-xl font-semibold">
+                  Full Jersey Set
+                </h2>
+                <p class="text-[#11111180] text-xl font-normal">
+                  <span>69.00</span> TK
+                </p>
+              </div>
+            </div>
+            <!-- card Three  -->
+            <div
+              onclick="btnHandler(this)"
+              class="card bg-base-100 shadow-2xl px-5 pt-5"
+            >
+              <figure class="px-10 bg-[#1111110D]">
+                <img
+                  src="./images/prod6.png"
+                  class="rounded-xl py-8 w-[120px]"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <!-- product rating  -->
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-3"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+
+                <h2 class="card-title text-xl font-semibold">Sports cates</h2>
+                <p class="text-[#11111180] text-xl font-normal">
+                  <span>159.00</span> TK
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- start cart area  -->
+      <div class="mt-16 md:text-center">
+        <!-- coupon code area  -->
+        <div class="bg-white shadow-2xl p-5 rounded-md lg:mt-20">
+          <h1 class="text-titleColor text-2xl font-medium mb-3">
+            Have coupon?
+          </h1>
+          <!-- coupon code input  -->
+          <div class="flex md:justify-center">
+            <input
+              type="text"
+              placeholder="Coupon code"
+              class="input input-bordered w-full max-w-xs rounded-r-none text-xl text-[#11111180]"
+            />
+            <button
+              class="btn btn-secondary rounded-l-none capitalize text-white text-xl font-semibold"
+              disabled
+            >
+              Apply
+            </button>
+          </div>
+        </div>
+
+        <div class="bg-white shadow-2xl p-5 rounded-md mt-8">
+          <!-- product list area  -->
+          <ul
+            id="newElement"
+            class="mb-2 pl-5 text-titleColor text-2xl font-medium"
+            style="list-style-type: decimal"
+          ></ul>
+          <hr />
+
+          <!-- product price area  -->
+          <div class="mt-2">
+            <!-- total Price  -->
+            <p class="text-titleColor text-2xl font-medium mt-4">
+              Total Price:
+              <span class="text-[#11111180] text-2xl font-medium">257.00</span
+              ><span class="text-[#11111180] text-2xl font-medium">Tk</span>
+            </p>
+            <!-- Discount price  -->
+            <p class="text-titleColor text-2xl font-medium my-4">
+              Discount:
+              <span class="text-[#11111180] text-2xl font-medium">257.00</span
+              ><span class="text-[#11111180] text-2xl font-medium">Tk</span>
+            </p>
+            <!-- total  -->
+            <p class="text-titleColor text-2xl font-medium mb-4">
+              Total Price:
+              <span class="text-[#11111180] text-2xl font-medium">257.00</span
+              ><span class="text-[#11111180] text-2xl font-medium">Tk</span>
+            </p>
+
+            <hr />
+
+            <button
+              disabled
+              class="btn btn-secondary my-4 w-full text-white font-semibold capitalize text-xl"
+            >
+              Make Purchase
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
   <script src="./app.js"></script>
 </html>
