finished dom operation

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         </section>
       </div>
       <!-- start cart area  -->
-      <div class="mt-16 md:text-center">
+      <div class="mt-16 md:text-center lg:text-left">
         <!-- coupon code area  -->
         <div class="bg-white shadow-2xl p-5 rounded-md lg:mt-20">
           <h1 class="text-titleColor text-2xl font-medium mb-3">
@@ -373,11 +373,13 @@
           <!-- coupon code input  -->
           <div class="flex md:justify-center">
             <input
+              id="couponInput"
               type="text"
               placeholder="Coupon code"
               class="input input-bordered w-full max-w-xs rounded-r-none text-xl text-[#11111180]"
             />
             <button
+              id="applyBtn"
               class="btn btn-secondary rounded-l-none capitalize text-white text-xl font-semibold"
               disabled
             >
@@ -390,7 +392,7 @@
           <!-- product list area  -->
           <ul
             id="newElement"
-            class="mb-2 pl-5 text-titleColor text-2xl font-medium"
+            class="mb-2 pl-10 text-titleColor text-2xl font-medium"
             style="list-style-type: decimal"
           ></ul>
           <hr />
@@ -400,30 +402,75 @@
             <!-- total Price  -->
             <p class="text-titleColor text-2xl font-medium mt-4">
               Total Price:
-              <span class="text-[#11111180] text-2xl font-medium">257.00</span
-              ><span class="text-[#11111180] text-2xl font-medium">Tk</span>
+              <span
+                id="totalPrice"
+                class="text-[#11111180] text-2xl font-medium"
+              ></span
+              ><span
+                id="tk"
+                class="text-[#11111180] text-2xl font-medium hidden"
+                >Tk</span
+              >
             </p>
             <!-- Discount price  -->
             <p class="text-titleColor text-2xl font-medium my-4">
               Discount:
-              <span class="text-[#11111180] text-2xl font-medium">257.00</span
-              ><span class="text-[#11111180] text-2xl font-medium">Tk</span>
+              <span
+                id="discount"
+                class="text-[#11111180] text-2xl font-medium"
+              ></span
+              ><span
+                id="discountTk"
+                class="text-[#11111180] text-2xl font-medium hidden"
+                >Tk</span
+              >
             </p>
             <!-- total  -->
             <p class="text-titleColor text-2xl font-medium mb-4">
               Total Price:
-              <span class="text-[#11111180] text-2xl font-medium">257.00</span
-              ><span class="text-[#11111180] text-2xl font-medium">Tk</span>
+              <span
+                id="totalPriceToPay"
+                class="text-[#11111180] text-2xl font-medium"
+              ></span
+              ><span
+                id="totalPriceToPayTk"
+                class="text-[#11111180] text-2xl font-medium hidden"
+                >Tk</span
+              >
             </p>
 
             <hr />
 
             <button
+              onclick="my_modal_5.showModal()"
+              id="purchaseBtn"
               disabled
               class="btn btn-secondary my-4 w-full text-white font-semibold capitalize text-xl"
             >
               Make Purchase
             </button>
+            <!-- Modal Body -->
+
+            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+              <form
+                method="dialog"
+                class="modal-box flex flex-col items-center"
+              >
+                <img src="./images/congo.png" alt="" class="max-w-xs" />
+                <h3 class="font-bold text-4xl pt-5">Congratulations!</h3>
+                <p class="py-4 text-xl text-[#11111180]">
+                  Your Purchase the product
+                </p>
+                <div class="modal-action">
+                  <button
+                    onclick="goHome()"
+                    class="btn btn-secondary my-4 text-white font-semibold capitalize text-xl"
+                  >
+                    Go Home
+                  </button>
+                </div>
+              </form>
+            </dialog>
           </div>
         </div>
       </div>
