--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
               onclick="my_modal_5.showModal()"
               id="purchaseBtn"
               disabled
-              class="btn btn-secondary my-4 w-full text-white font-semibold capitalize text-xl"
+              class="btn btn-secondary my-4 lg:w-full text-white font-semibold capitalize text-xl"
             >
               Make Purchase
             </button>
